Fix horizontal scroll on Windows devices

--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -51,6 +51,7 @@ main {
       content: "";
       position: absolute;
       height: 0;
+      right: 0;
     }
 
     &::before {
